--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -128,7 +128,7 @@
 
 .slide-button {
   display: inline-block;
-  background: #007bff;
+  background: #176ac2db;
   color: white;
   border: none;
   padding: 1rem 2rem;
