--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -8,7 +8,7 @@
 /* Slide Styles */
 .hero-slide {
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -67,6 +67,7 @@
 .slide-content {
   position: absolute;
   top: 50%;
+  margin-top: 30px  ;
   left: 30%;
   transform: translate(-50%, -50%);
   text-align: left;
